--- a/roles/schema-registry-ui/tasks/config.yml
+++ b/roles/schema-registry-ui/tasks/config.yml
@@ -1,7 +1,7 @@
 ---
 - name: copy config file for Schema Registry UI
   template:
-    src: ../files/env.js
+    src: env.js
     dest: /opt/schema-registry-ui-{{ schema_registry_ui_version }}/env.js
     owner: "{{ schema_registry_ui_os_user_name }}"
     group: "{{ schema_registry_ui_os_user_name }}"
@@ -11,7 +11,7 @@
 
 - name: copy config file for Caddy
   template:
-    src: ../files/caddyfile
+    src: caddyfile
     dest: /opt/caddy_{{ caddy_version }}/caddyfile
     owner: "{{ schema_registry_ui_os_user_name }}"
     group: "{{ schema_registry_ui_os_user_name }}"
@@ -21,7 +21,7 @@
 
 - name: copy Schema Registry UI systemd service file
   template:
-    src: ../files/schema-registry-ui.service
+    src: schema-registry-ui.service
     dest: /lib/systemd/system/schema-registry-ui.service
     owner: root
     group: root
