--- a/roles/confluent-platform/tasks/apt-repos.yml
+++ b/roles/confluent-platform/tasks/apt-repos.yml
@@ -1,4 +1,5 @@
 ---
+# https://docs.confluent.io/current/installation/installing_cp/deb-ubuntu.html
 - name: add Confluent's public key
   apt_key:
     url: http://packages.confluent.io/deb/{{ confluent_platform_version }}/archive.key
@@ -6,6 +7,6 @@
 
 - name: add Confluent's .deb repository
   apt_repository:
-    repo: "deb http://packages.confluent.io/deb/{{ confluent_platform_version }} stable main"
+    repo: "deb [arch=amd64] http://packages.confluent.io/deb/{{ confluent_platform_version }} stable main"
     state: present
     update_cache: true
