--- a/roles/nifi/templates/nifi.properties
+++ b/roles/nifi/templates/nifi.properties
@@ -153,13 +153,13 @@ nifi.sensitive.props.algorithm=PBEWITHMD5AND256BITAES-CBC-OPENSSL
 nifi.sensitive.props.provider=BC
 nifi.sensitive.props.additional.keys=
 
-nifi.security.keystore=./conf/{{ nifi_security_truststore_file_name }}
+nifi.security.keystore=./conf/{{ nifi_security_truststore_file_name | default('') }}
 nifi.security.keystoreType=PKCS12
-nifi.security.keystorePasswd={{ nifi_security_truststore_passwd }}
-nifi.security.keyPasswd={{ nifi_security_truststore_passwd }}
-nifi.security.truststore=./conf/{{ nifi_security_truststore_file_name }}
+nifi.security.keystorePasswd={{ nifi_security_truststore_passwd | default('') }}
+nifi.security.keyPasswd={{ nifi_security_truststore_passwd | default('') }}
+nifi.security.truststore=./conf/{{ nifi_security_truststore_file_name | default('') }}
 nifi.security.truststoreType=PKCS12
-nifi.security.truststorePasswd={{ nifi_security_truststore_passwd }}
+nifi.security.truststorePasswd={{ nifi_security_truststore_passwd | default('') }}
 nifi.security.needClientAuth=
 nifi.security.user.authorizer=managed-authorizer
 nifi.security.user.login.identity.provider=
@@ -170,8 +170,8 @@ nifi.security.ocsp.responder.certificate=
 nifi.security.user.oidc.discovery.url=https://accounts.google.com/.well-known/openid-configuration
 nifi.security.user.oidc.connect.timeout=5 secs
 nifi.security.user.oidc.read.timeout=5 secs
-nifi.security.user.oidc.client.id={{ nifi_oauth_client_id }}
-nifi.security.user.oidc.client.secret={{ nifi_oauth_client_secret }}
+nifi.security.user.oidc.client.id={{ nifi_oauth_client_id | default('') }}
+nifi.security.user.oidc.client.secret={{ nifi_oauth_client_secret | default('') }}
 nifi.security.user.oidc.preferred.jwsalgorithm=
 
 # Apache Knox SSO Properties #
