--- a/roles/nifi/templates/nifi.service
+++ b/roles/nifi/templates/nifi.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 Type=forking
 User={{ nifi_os_user_name }}
-Group={{ nifi_os_user_name }}
+Group={{ nifi_os_group_name }}
 ExecStart=/opt/nifi/bin/nifi.sh start
 ExecStop=/opt/nifi/bin/nifi.sh stop
 
