Update NiFi to support HTTP mode in config, increase file handles and forks limit, replace Oracle Java with OpenJDK

--- a/roles/java/tasks/main.yml
+++ b/roles/java/tasks/main.yml
@@ -5,26 +5,36 @@
     name: software-properties-common
     state: latest
 
-- name: add webupd8 Oracle Java repo
-  become: yes
-  apt_repository:
-    repo: "ppa:webupd8team/java"
+# Oracle Java 8
+#- name: add webupd8 Oracle Java repo
+#  become: yes
+#  apt_repository:
+#    repo: "ppa:webupd8team/java"
+#
+#- name: accept Java 8 license
+#  become: yes
+#  debconf:
+#    name: "oracle-java8-installer"
+#    question: "shared/accepted-oracle-license-v1-1"
+#    value: "true"
+#    vtype: "select"
+#
+#- name: install Oracle Java 8
+#  become: yes
+#  apt:
+#    name: "{{item}}"
+#    state: latest
+#  with_items:
+#    - oracle-java8-installer
+#    - ca-certificates
+#    - oracle-java8-unlimited-jce-policy
+#    - oracle-java8-set-default
 
-- name: accept Java 8 license
-  become: yes
-  debconf:
-    name: "oracle-java8-installer"
-    question: "shared/accepted-oracle-license-v1-1"
-    value: "true"
-    vtype: "select"
-
-- name: install Oracle Java 8
+- name: install Open JDK 8
   become: yes
   apt:
     name: "{{item}}"
     state: latest
   with_items:
-    - oracle-java8-installer
-    - ca-certificates
-    - oracle-java8-unlimited-jce-policy
-    - oracle-java8-set-default
+    - openjdk-8-jdk
+    - ca-certificates-java
