--- a/roles/nifi/templates/nifi.properties
+++ b/roles/nifi/templates/nifi.properties
@@ -125,7 +125,7 @@ nifi.components.status.snapshot.frequency=1 min
 
 # Site to Site properties
 nifi.remote.input.host={{ nifi_domain_name }}
-nifi.remote.input.secure=true
+nifi.remote.input.secure={{ 'true' if nifi_security_truststore_file_name is defined else 'false' }}
 nifi.remote.input.socket.port={{ nifi_remote_input_port }}
 nifi.remote.input.http.enabled=true
 nifi.remote.input.http.transaction.ttl=30 sec
@@ -133,12 +133,13 @@ nifi.remote.contents.cache.expiration=30 secs
 
 # web properties #
 nifi.web.war.directory=./lib
-#nifi.web.http.host={{ ansible_default_ipv4.address }}
-nifi.web.http.host=
-nifi.web.http.port=
+#nifi.web.http.host={{ ansible_default_ipv4.address if nifi_security_truststore_file_name is not defined else '' }}
+nifi.web.http.host={{ nifi_domain_name if nifi_security_truststore_file_name is not defined else '' }}
+nifi.web.http.port={{ nifi_listener_port if nifi_security_truststore_file_name is not defined else '' }}
 nifi.web.http.network.interface.default=
-nifi.web.https.host={{ nifi_domain_name }}
-nifi.web.https.port={{ nifi_listener_port }}
+#nifi.web.https.host={{ ansible_default_ipv4.address if nifi_security_truststore_file_name is defined else '' }}
+nifi.web.https.host={{ nifi_domain_name if nifi_security_truststore_file_name is defined else '' }}
+nifi.web.https.port={{ nifi_listener_port if nifi_security_truststore_file_name is defined else '' }}
 nifi.web.https.network.interface.default=
 nifi.web.jetty.working.directory=./work/jetty
 nifi.web.jetty.threads=200
@@ -167,9 +168,9 @@ nifi.security.ocsp.responder.url=
 nifi.security.ocsp.responder.certificate=
 
 # OpenId Connect SSO Properties #
-nifi.security.user.oidc.discovery.url=https://accounts.google.com/.well-known/openid-configuration
-nifi.security.user.oidc.connect.timeout=5 secs
-nifi.security.user.oidc.read.timeout=5 secs
+nifi.security.user.oidc.discovery.url={{ 'https://accounts.google.com/.well-known/openid-configuration' if nifi_oauth_client_id is defined else '' }}
+nifi.security.user.oidc.connect.timeout={{ '5 secs' if nifi_oauth_client_id is defined else '' }}
+nifi.security.user.oidc.read.timeout={{ '5 secs' if nifi_oauth_client_id is defined else '' }}
 nifi.security.user.oidc.client.id={{ nifi_oauth_client_id | default('') }}
 nifi.security.user.oidc.client.secret={{ nifi_oauth_client_secret | default('') }}
 nifi.security.user.oidc.preferred.jwsalgorithm=
