--- a/roles/basic/tasks/config.yml
+++ b/roles/basic/tasks/config.yml
@@ -57,12 +57,12 @@
       line: "{{ hostvars[item].ansible_default_ipv4.address }} {{ item }}"
       state: present
   when: hostvars[item].ansible_default_ipv4 is defined and hostvars[item].ansible_default_ipv4.address is defined
-  with_items: "{{ groups['data-platform'] }}"
+  with_items: "{{ groups['data_platform'] }}"
 
 - name: set swappiness value via sysctl
   sysctl:
     name: vm.swappiness
-    value: 10
+    value: '10'
     state: present
     reload: yes
   notify:
