--- a/roles/letsencrypt-certbot/tasks/main.yml
+++ b/roles/letsencrypt-certbot/tasks/main.yml
@@ -4,11 +4,8 @@
 
 - name: install Certbot package
   apt:
-    name: "{{ item }}"
+    name: ['software-properties-common','certbot']
     state: present
-  with_items:
-    - software-properties-common
-    - certbot
 
 - include_tasks: get_certificate.yml
   with_items: "{{ letsencrypt_domain_names }}"
